projetGL/src/test/deca/extension/context/invalid/invalid_02.deca
//Description:type de tableau non conforme au type declaré(class-->int)

class A{
    int x;
    float sum(float y,int x){
        return(x+y);
    }
}
{
    A a=new A();
    a tab[][]=new int[][];
    println("ceci est un tableau de classe A);
}